added navbar section

--- a/styles/porfolio.css
+++ b/styles/porfolio.css
@@ -6,6 +6,8 @@ body {
 /* nav related style */
 nav {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .nav-title {
@@ -20,6 +22,8 @@ nav {
 
 nav>ul {
     display: flex;
+    align-items: center;
+
 }
 
 nav li {
