--- a/styles/porfolio.css
+++ b/styles/porfolio.css
@@ -8,6 +8,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 
 .nav-title {
@@ -43,4 +44,17 @@ nav a {
     font-weight: 700;
     color: white;
     padding: 15px 35px;
+}
+
+/* header related style*/
+.header{
+    background: #FFF8F3;
+}
+.banner{
+    margin: 30px 30px 30px 150px;
+    display: flex;  
+    align-items: center;
+}
+.profile-pic{
+    width: 500px;
 }
