--- a/styles/porfolio.css
+++ b/styles/porfolio.css
@@ -3,6 +3,19 @@ body {
     font-family: 'Work Sans', sans-serif;
 }
 
+.section-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-description {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+}
+
 /* nav related style */
 nav {
     display: flex;
@@ -47,14 +60,47 @@ nav a {
 }
 
 /* header related style*/
-.header{
+.header {
     background: #FFF8F3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
-.banner{
-    margin: 30px 30px 30px 150px;
-    display: flex;  
+
+.banner {
+    margin: 30px 30px 0px 150px;
+    display: flex;
     align-items: center;
+    justify-content: space-between;
 }
-.profile-pic{
+
+.profile-pic {
     width: 500px;
+}
+
+.banner-content {
+    max-width: 500px;
+}
+
+.banner-greeting {
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+
+.banner-title {
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+/* main section style */
+/* about section style */
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
+
 }
