--- a/styles/porfolio.css
+++ b/styles/porfolio.css
@@ -96,6 +96,12 @@ nav a {
 }
 
 /* main section style */
+
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
 /* about section style */
 .about {
     padding: 130px;
@@ -103,4 +109,11 @@ nav a {
     background: #FFF8F3;
     margin: 130px 0;
 
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align:center;
 }
